--- a/wenquxing/src/App.css
+++ b/wenquxing/src/App.css
@@ -1,4 +1,19 @@
+:root {
+  --primary-100: #d4eaf7;
+  --primary-200: #b6ccd8;
+  --primary-300: #3b3c3d;
+  --accent-100: #71c4ef;
+  --accent-200: #00668c;
+  --text-100: #1d1c1c;
+  --text-200: #313d44;
+  --bg-100: #fffefb;
+  --bg-200: #f5f4f1;
+  --bg-300: #cccbc8;
+}
+
 .App {
+  background-color: var(--bg-100);
+  color: var(--text-100);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -9,8 +24,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
+  background-color: var(--primary-300);
+  color: var(--bg-100);
 }
 
 .nav-title {
@@ -21,32 +36,48 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  background-color: var(--bg-200);
 }
 
 .left-column,
 .center-column,
 .right-column {
   flex-basis: 30%;
-  border: 1px solid #ddd;
+  border: 1px solid var(--primary-200);
   border-radius: 8px;
   padding: 20px;
   margin: 10px;
+  background-color: var(--bg-100);
 }
 
 @media (max-width: 768px) {
   .content {
-    flex-direction: column;
+      flex-direction: column;
   }
 
   .left-column,
   .center-column,
   .right-column {
-    flex-basis: auto;
-    width: 100%;
+      flex-basis: auto;
+      width: 100%;
   }
 }
 
 input, button, textarea, select {
   pointer-events: auto;
   opacity: 1;
+}
+
+button {
+  background-color: var(--accent-100);
+  color: var(--bg-100);
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: var(--accent-200);
 }
