--- a/wenquxing/src/App.css
+++ b/wenquxing/src/App.css
@@ -39,27 +39,55 @@
   background-color: var(--bg-200);
 }
 
-.left-column,
-.center-column,
-.right-column {
-  flex-basis: 30%;
+.left-column {
+  flex: 2;
   border: 1px solid var(--primary-200);
   border-radius: 8px;
   padding: 20px;
   margin: 10px;
   background-color: var(--bg-100);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.center-column {
+  flex: 6;
+  border: 1px solid var(--primary-200);
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  background-color: var(--bg-100);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.right-column {
+  flex: 4;
+  border: 1px solid var(--primary-200);
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  background-color: var(--bg-100);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
   .content {
-      flex-direction: column;
+    flex-direction: column;
   }
 
   .left-column,
   .center-column,
   .right-column {
-      flex-basis: auto;
-      width: 100%;
+    flex-basis: auto;
+    width: 100%;
   }
 }
 
